--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+<h1>EasyHTTP Example</h1>
+
   <script src="libs/easyhttp.js"></script>
   <script src="app.js"></script>
 </body>
